<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    >

    <item
        android:id="@+id/action_Add"
        android:icon="@drawable/addicon"
        app:showAsAction="always"
        android:title="add">
    </item>

    <item
        android:id="@+id/action_Login"
        app:showAsAction="never"
        android:title="@string/login_button">
    </item>

    <item
        android:id="@+id/action_Register"
        app:showAsAction="never"
        android:title="@string/register_button">
    </item>

    <item
        android:id="@+id/action_Logout"
        app:showAsAction="never"
        android:title="@string/logout_button">
    </item>

    <item
        android:id="@+id/action_Profile"
        app:showAsAction="never"
        android:title="@string/profile_button">
    </item>

</menu>