<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/post_title"/>

        <EditText
            android:id="@+id/add_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:hint="@string/post_title_prompt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/post_content"/>

        <EditText
            android:id="@+id/add_post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_content_prompt"
            android:minLines="5"
            android:maxLines="5"
            android:maxLength="250"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/postBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_button"
                android:onClick="addPost"/>

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button"
                android:onClick="cancelPost"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>