<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">



    <EditText
        android:id="@+id/username_register"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="16dp"
        android:maxLength="16"
        android:hint="@string/username_field"/>

    <EditText
        android:id="@+id/password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:textSize="16dp"
        android:maxLength="16"
        android:hint="@string/password_field"/>

    <EditText
        android:id="@+id/password_confirm_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:textSize="16dp"
        android:maxLength="16"
        android:hint="@string/confirm_pass_field"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doRegistration"
            android:text="@string/register_button"/>

        <Button
            android:id="@+id/register_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelRegistration"
            android:text="@string/cancel_button"/>
    </LinearLayout>

</LinearLayout>