<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/lightGrey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/login_prompt"
        android:textColor="@color/darkBlue"/>

    <EditText
        android:id="@+id/username_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingBottom="10dp"
        android:textSize="16dp"
        android:maxLength="16"
        android:hint="@string/username_field"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:textSize="16dp"
        android:inputType="textPassword"
        android:maxLength="16"
        android:hint="@string/password_field"
        android:textColorHint="@color/black"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doLogin"
            android:layout_margin="5dp"
            android:text="@string/login_button"
            android:background="@color/green"/>

        <Button
            android:id="@+id/login_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelLogin"
            android:layout_margin="5dp"
            android:text="@string/cancel_button"
            android:background="@color/red"/>
    </LinearLayout>

</LinearLayout>