<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ShowDiscussionBoardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/title_holder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/post_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_title"
                        android:textStyle="bold"
                        android:textSize="18dp"/>

                    <TextView
                        android:id="@+id/poster_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_text"
                        android:textSize="18dp"
                        android:padding="5dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/vote_counter"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_alignStart="@+id/title_holder"
                    android:textAlignment="center"
                    android:layout_marginStart="296dp"
                    android:padding="5dp"
                    android:text="+1" />

                <LinearLayout
                    android:id="@+id/post_content_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/title_holder">

                    <TextView
                        android:id="@+id/post_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sample_description"
                        android:padding="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/post_content_holder"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/comment_content_prompt"
                        android:textSize="18dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="postComment"
                            android:text="@string/post_comment"/>


                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="cancelComment"
                            android:text="@string/cancel_comment"/>


                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_comments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"/>
</LinearLayout>