<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile"
    android:background="@color/white">


    <TextView
        android:id="@+id/user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:text="Username Here"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:padding="10dp"
            android:textColor="@color/darkBlue"
            android:text="@string/date_created"/>

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:padding="10dp"
            android:textColor="@color/blue"
            android:text="Date Here"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:padding="10dp"
            android:textColor="@color/green"
            android:text="@string/post_liked"/>

        <ListView android:id="@+id/likes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_white">
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:padding="10dp"
            android:textColor="@color/red"
            android:text="@string/post_disliked"/>

        <ListView android:id="@+id/dislikes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_white">
        </ListView>
    </LinearLayout>

</LinearLayout>